# AMD-TrueAudioNext-Complete

./: CMakeLists.txt  README.md  init-linux.sh  init-mac.sh  init-win.bat
TAN/: .gitignore
TAN/tan/tanlibrary/src/Graal/OclKernels/: amdFIR_kernels.h
openmp/.svn/: wc.db
